Fix Spacing

--- a/pages/[prefecture_name_e]/[city_code]/chain_shops/[eng_name]/[shop_id]/components/shopDetailInfo/index.module.scss
+++ b/pages/[prefecture_name_e]/[city_code]/chain_shops/[eng_name]/[shop_id]/components/shopDetailInfo/index.module.scss
@@ -5,6 +5,10 @@
       border-bottom: 1px solid #d6ceb4;
       border-left: 1px solid #d6ceb4;
       background-color: #faf8f5;
+      white-space: nowrap;
+    }
+    th, td{
+      vertical-align: middle;
     }
   }
 }
